<resources>
    <string name="home_indicator">bottom_point</string>
    <string name="wallpaper_scrolling">all</string>
    <string name="sharedUserId"></string>
    <string name="process"></string>
    <string name="application_name">System launcher</string>
    <string name="folder_name">Folder</string>
    <string name="unnamed_folder_name">Unnamed folder</string>
    <string name="chooser_wallpaper">Choose a new wallpaper</string>
    <string name="activity_not_found">App isn\'t installed on your device</string>
    <string name="cancel_action">Cancel</string>
    <string name="bad_wallpaper_source_prompt">Can\'t load wallpaper</string>
    <string name="apply_action">Set</string>
    <string name="download_action">Download</string>
    <string name="lock_screen_failed_message">Can\'t set lock screen wallpaper</string>
    <string name="lock_screen_success_message">Applied to lock screen</string>
    <string name="wallpaper_failed_message">Can\'t set wallpaper</string>
    <string name="launcher_not_exist">Home is stopped, please return home and try again.</string>
    <string name="image_too_small_message">Original image isn\'t big enough</string>
    <string name="failed_to_load_image">Can\'t load image</string>
    <string name="wallpaper_success_message">Wallpaper applied</string>
    <string name="is_setting_wallpaper_message">Setting wallpaper…</string>
    <string name="current_wallpaper">Current</string>
    <string name="menu_item_add_item">Place on Home screen</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_folder">New folder</string>
    <string name="group_live_folders">Folders</string>
    <string name="out_of_space">No more room on this Home screen</string>
    <string name="title_select_shortcut">Select shortcut</string>
    <string name="title_select_live_folder">Select folder</string>
    <string name="app_being_backup_message">App is being backed up</string>
    <string name="app_being_restored_message">App is being restored</string>
    <string name="menu_add">Add</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_workspace_preview">Preview Home screens</string>
    <string name="menu_back_desktop">Back to Home screen</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_reset_scene">Reset to default layout</string>
    <string name="menu_exit_scene">Exit Mi Space</string>
    <string name="permlab_install_shortcut">Install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">Uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows an app to remove shortcuts without user intervention.</string>
    <string name="permlab_install_widget">Install widgets</string>
    <string name="permdesc_install_widget">Allows an app to add widgets without user intervention.</string>
    <string name="permlab_read_settings">Read Home Settings and Shortcuts</string>
    <string name="permdesc_read_settings">Allows an app to read the settings and shortcuts in Home.</string>
    <string name="permlab_write_settings">Edit Home Settings and Shortcuts</string>
    <string name="permdesc_write_settings">Allows an app to change the settings and shortcuts in Home.</string>
    <string name="status_pending">Waiting</string>
    <string name="status_downloading">Downloading</string>
    <string name="status_paused">Paused</string>
    <string name="status_downloaded">Downloaded</string>
    <string name="status_installing">Installing</string>
    <string name="app_already_exist">App already exists</string>
    <string name="loading_desktop">Just a sec…</string>
    <string name="loading_wallpaper">Just a sec…</string>
    <string name="start_activity_failed">Can\'t start launcher</string>
    <string name="gadget_error_text">Can\'t load widget</string>
    <string name="mtzgadget_missing_text">Widget isn\'t available</string>
    <string name="menu_edit">Edit Home screen</string>
    <string name="menu_sort">Sort apps</string>
    <string name="menu_launcher_setting">Launcher settings</string>
    <string name="editing_tips">Edit Home screen</string>
    <string name="editing_mode_title">%1$d selected</string>
    <string name="editing_mode_title_empty">0 selected</string>
    <string name="multi_selecting_tips">To pick up an app, drag its icon and drop here</string>
    <string name="editing_add_widget_tips">Edit widgets</string>
    <string name="editing_set_wallpaper_tips">Choose wallpaper</string>
    <string name="editing_set_transition_effect_tips">Choose screen transition effect</string>
    <string name="editing_set_screen_layout_cells">Choose screen layout effect</string>
    <string name="cant_remove_system_app">Can\'t remove system app</string>
    <string name="cant_remove_retained_app">Couldn\'t remove this app</string>
    <string name="uninstall_dialog_message">Uninstalling will remove all app data.</string>
    <string name="uninstall_dialog_title_format">Uninstall %s?</string>
    <string name="uninstall_xspace_dialog_title_format">Uninstall dual \"%s\"</string>
    <string name="uninstall_xspace_dialog_message">Uninstalling dual app will remove all app data.</string>
    <string name="uninstall_with_xspace_dialog_message">Corresponding dual apps will be removed together with app data.</string>
    <string name="confirm_uninstall_dialog_title">Corresponding dual apps will be removed.</string>
    <string name="confirm_uninstall_dialog_has_xspace_app_msg">Dual app will be uninstalled together with this one.</string>
    <string name="confirm_uninstall_dialog_contain_xspace_app_msg">Dual apps will be uninstalled together with these ones.</string>
    <string name="uninstall_dialog_title_multi_format">Uninstall %s and %d other apps?</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstall_result_multi_succeeded">%1$d apps uninstalled</string>
    <string name="uninstall_result_succeeded">App uninstalled</string>
    <string name="uninstall_result_failed">Can\'t uninstall %s</string>
    <string name="uninstall_result_two_failed">Can\'t uninstall %s and 1 other app</string>
    <string name="uninstall_result_other_failed">Can\'t uninstall %s and %d other apps</string>
    <string name="starting_preset_app">Starting…</string>
    <string name="install">Install</string>
    <string name="cant_remove_folder">Can\'t remove folder</string>
    <string name="widget_favorite_contacts_label">Favorite contacts</string>
    <string name="widget_favorite_contacts_edit">Editor</string>
    <string name="widget_favorite_contacts_style">Change size</string>
    <string name="edit_folder_title">Edit folder name</string>
    <string name="sort_by_not_defined">Auto-sort</string>
    <string name="sort_by_frequency">Sort by usage</string>
    <string name="sort_by_abc">Sort by name</string>
    <string name="encryption">Encryption</string>
    <string name="failed_to_drop">Can\'t move</string>
    <string name="failed_to_drop_widget_nospace">No more room on this Home screen</string>
    <string name="failed_to_drop_widget_invalid">Widget invalid</string>
    <string name="failed_to_delete_temporary">Can\'t remove</string>
    <string name="confirm_btn_label">OK</string>
    <string name="cancel_btn_label">Cancel</string>
    <string name="default_folder_title_tools">Tools</string>
    <string name="default_folder_title_recommend">More Apps</string>
    <string name="default_folder_title_microsoft">Microsoft</string>
    <string name="default_folder_title_game">Games</string>
    <string name="default_folder_title_security">System</string>
    <string name="default_folder_title_telcel">Telcel</string>
    <string name="default_folder_title_claro">Claro</string>
    <string name="wallpaper_settings">Wallpaper</string>
    <string name="choose_wallpaper">Choose wallpaper</string>
    <string name="current_preview">Preview</string>
    <string name="normal_wallpaper">Wallpaper</string>
    <string name="lock_screen_wallpaper">Lock screen wallpaper</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="mi_wallpaper">MIUI Theme Store</string>
    <string name="show_all">Show all</string>
    <string name="local_wallpaper">Downloaded</string>
    <string name="setting_wallpaper_tip">Pinch or swipe to adjust</string>
    <string name="apply_as_wallpaper">Set as Home screen</string>
    <string name="apply_as_lock_screen">Set as lock screen</string>
    <string name="apply_both">Set both</string>
    <string name="enable_wallpaper_scroll">Turn side-scrolling on</string>
    <string name="disable_wallpaper_scroll">Turn side-scrolling off</string>
    <string name="default_shortcut_title_10086">10086.cn</string>
    <string name="online_wallpaper">Online</string>
    <string name="custom_wallpaper_picker">Browse</string>
    <string name="reset_scene_prompt">Screen will be reset to default layout.</string>
    <string name="preferences_title">Launcher settings</string>
    <string name="preferences_general_title">Additional settings</string>
    <string name="pref_keep_in_memory_title">Lock MIUI in memory</string>
    <string name="pref_keep_in_memory_summary">Keep launcher running when memory is low</string>
    <string name="pref_render_in_truecolor_title">High quality graphics</string>
    <string name="pref_render_in_truecolor_summary">Turning off this feature improves drawing performance</string>
    <string name="pref_enable_drawing_cache_title">Drawing cache</string>
    <string name="pref_enable_drawing_cache_summary">Turn off to free up memory. This may cause slower performance.</string>
    <string name="pref_icon_shadow_title">App shadows</string>
    <string name="pref_icon_shadow_summary">Show app shadows and Favorites tray reflection effects</string>
    <string name="transformation_type_classic">Overslide</string>
    <string name="transformation_type_classic_no_overshoot">Slide</string>
    <string name="transformation_type_crossfade">Crossfade</string>
    <string name="transformation_type_falldown">Tumble</string>
    <string name="transformation_type_cube">Cube</string>
    <string name="transformation_type_leftpage">Page</string>
    <string name="transformation_type_stack">Cascade</string>
    <string name="transformation_type_rotate">Rotate</string>
    <string name="pref_screen_transformation_type_title">Screen transition effect</string>
    <string name="pref_wallpaper_scroll_type_title">Wallpaper alignment</string>
    <string name="configure_wallpaper">Settings</string>
    <string name="pref_cell_layout_size">App icon layout</string>
    <string name="pref_keep_layout_title">Lock app positions</string>
    <string name="pref_keep_layout_summary">Changing your Home screen\'s layout will not affect apps\' positions relative to each other</string>
    <string name="widget_gadget_player">Music</string>
    <string name="buffering">Buffering…</string>
    <string name="emptyplaylist">Tap to add songs</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="gadget_search_label">Search</string>
    <string name="global_search_hint">Search</string>
    <string name="widget_global_search">Search</string>
    <string name="gadget_clear_button_label">Cleaner</string>
    <string name="gadget_power_clear_button_label">Deep Clean</string>
    <string name="free_style_apps_title">Choose app</string>
    <string name="free_style_edit_tab_shortcut">Shortcuts</string>
    <string name="free_style_edit_tab_free_component">Objects</string>
    <string name="free_style_edit_tab_widget">Widgets</string>
    <string name="free_style_edit_move_tip">Touch &amp; hold to move an item</string>
    <string name="wallpaper_scroll_type_tips">Wallpaper scroll</string>
</resources>