<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:id="@id/container" android:background="#60000000" android:paddingTop="40dp" android:paddingBottom="40dp" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="20sp" android:textColor="#ffffffff" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@id/title" android:background="@drawable/free_style_apps_title_bg" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/free_style_apps_title" android:shadowColor="#cd000000" android:shadowDx="0.0" android:shadowDy="3.0" android:shadowRadius="7.0" />
    <LinearLayout android:orientation="vertical" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <GridView android:scrollbarThumbVertical="@drawable/folder_scrollbar_v" android:scrollbarStyle="insideOverlay" android:id="@id/folder_content" android:background="@drawable/free_style_apps_content_bg" android:scrollbars="vertical" android:animationCache="false" android:layout_width="match_parent" android:layout_height="match_parent" android:listSelector="0x106000d" android:cacheColorHint="#00000000" android:horizontalSpacing="2dp" android:verticalSpacing="2dp" android:numColumns="UNKNOWN_DATA_0x7f0c0000" android:choiceMode="multipleChoice" android:layout_weight="1.0" />
        <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="horizontal" android:id="@id/buttons_container" android:background="@drawable/free_style_apps_button_bg" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/btnCancel" android:background="@drawable/free_style_apps_cancel_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="@string/cancel_btn_label" style="@style/free_style_apps_btn" />
            <TextView android:id="@id/btnOk" android:background="@drawable/free_style_apps_ok_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/confirm_btn_label" style="@style/free_style_apps_btn" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
