<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/com.android.launcher" launcher:id="@id/preview_screen" launcher:layout_width="match_parent" launcher:layout_height="match_parent">
    <com.miui.home.launcher.common.ScalableImageView launcher:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" launcher:id="@id/wallpaper_view" launcher:layout_width="match_parent" launcher:layout_height="match_parent" />
    <com.miui.home.launcher.common.AutoFadeInImageView launcher:id="@id/preview_top" launcher:layout_width="match_parent" launcher:layout_height="match_parent" />
    <FrameLayout launcher:id="@id/top_options" launcher:paddingTop="11dp" launcher:paddingRight="13dp" launcher:layout_width="match_parent" launcher:layout_height="wrap_content">
        <ImageView launcher:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" launcher:id="@id/live_wallpaper_settings" launcher:paddingLeft="20dp" launcher:paddingTop="11dp" launcher:layout_width="wrap_content" launcher:layout_height="wrap_content" launcher:src="@drawable/activity_more_btn" />
        <LinearLayout launcher:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" launcher:id="@id/wallpaper_scroll_type" launcher:layout_width="wrap_content" launcher:layout_height="wrap_content">
            <TextView launcher:textSize="12sp" launcher:textColor="@color/wallpaper_scroll_type" launcher:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" launcher:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" launcher:layout_width="wrap_content" launcher:layout_height="match_parent" launcher:layout_marginRight="9dp" launcher:text="@string/wallpaper_scroll_type_tips" launcher:singleLine="true" />
            <miui.widget.SlidingButton launcher:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" launcher:id="@id/scroll_button" launcher:paddingRight="13dp" launcher:layout_width="wrap_content" launcher:layout_height="match_parent" style="0x100d0088" />
        </LinearLayout>
    </FrameLayout>
    <FrameLayout launcher:id="@id/loading_view" launcher:background="@color/wallpaper_loading_mask" launcher:visibility="invisible" launcher:layout_width="match_parent" launcher:layout_height="match_parent">
        <LinearLayout launcher:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" launcher:orientation="vertical" launcher:id="@id/body" launcher:layout_width="wrap_content" launcher:layout_height="wrap_content" launcher:baselineAligned="false">
            <ProgressBar launcher:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" launcher:id="@id/progress" launcher:background="0x0" launcher:layout_width="wrap_content" launcher:layout_height="wrap_content" launcher:layout_marginBottom="21dp" launcher:maxWidth="128dp" launcher:maxHeight="128dp" launcher:indeterminateDrawable="@drawable/loading_dialog_progress" launcher:minWidth="0dp" launcher:minHeight="0dp" />
            <TextView launcher:textSize="13sp" launcher:textColor="#7fffffff" launcher:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" launcher:id="@id/message" launcher:layout_width="wrap_content" launcher:layout_height="wrap_content" launcher:text="@string/loading_wallpaper" />
        </LinearLayout>
    </FrameLayout>
    <FrameLayout launcher:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" launcher:id="@id/bottom_options" launcher:layout_width="match_parent" launcher:layout_height="wrap_content">
        <ImageView launcher:id="@id/bottom_bg" launcher:background="@drawable/wallpaper_preview_bottom_bg" launcher:layout_width="match_parent" launcher:layout_height="wrap_content" />
        <FrameLayout launcher:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" launcher:paddingBottom="24dp" launcher:layout_width="match_parent" launcher:layout_height="wrap_content">
            <Button launcher:textSize="12sp" launcher:textColor="@color/icon_title_text" launcher:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" launcher:id="@id/btnApply" launcher:background="@drawable/wallpaper_preview_confirm_btn" launcher:layout_width="UNKNOWN_DATA_0x7f0b0044" launcher:layout_height="UNKNOWN_DATA_0x7f0b0045" launcher:text="@string/apply_action" />
            <ImageView launcher:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" launcher:id="@id/more_settings_btn" launcher:paddingRight="13dp" launcher:layout_width="wrap_content" launcher:layout_height="wrap_content" launcher:src="@drawable/more_settings_btn" />
        </FrameLayout>
    </FrameLayout>
</FrameLayout>
